# sig-risk-analytics

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakeLists_HPC.txt  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  docker-compose.yml  package.json  requirements.txt
.claude/: settings.local.json
config/: risk_config.yaml
examples/: hpc_risk_analytics_demo.cpp  stress_testing_demo.cpp
include/core/: position_engine.hpp  types.hpp
include/hpc/: distributed_architecture.hpp  hpc_framework.hpp  lockfree_structures.hpp  performance_monitor.hpp  realtime_pipeline.hpp
include/risk/: greeks_calculator.hpp  risk_calculator.hpp
include/stress_testing/: stress_framework.hpp
python/benchmarks/: performance_benchmarks.py
python/optimization/: advanced_portfolio_optimization.py  portfolio_optimizer.py
python/risk_engine/: advanced_risk_metrics.py  monte_carlo_engine.py  stress_testing.py
python/tests/: test_position_engine.py  test_quantitative_integration.py  test_risk_calculator.py
scripts/: start.sh
src/: benchmarks.cpp  main.cpp
src/core/: position_engine.cpp
src/hpc/: gpu_monte_carlo.cu  parallel_risk_engine.cpp
src/risk/: black_scholes.cpp  monte_carlo.cpp
src/stress_testing/: historical_scenarios.cpp  monte_carlo_stress.cpp  multi_factor_stress.cpp  realtime_execution.cpp  regulatory_compliance.cpp  scenario_generator.cpp  shock_construction.cpp  visualization_reporting.cpp
streamlit_dashboard/: PROJECT_REPORT.md  README.md  main_dashboard.py  requirements.txt  run_dashboard.py
streamlit_dashboard/src/: __init__.py  alert_manager.py  auth_manager.py  backtesting_framework.py  data_provider.py  data_quality.py  export_manager.py  model_documentation.py  model_validation.py  regulatory_compliance.py  risk_engine.py  visualization_engine.py
streamlit_dashboard/tests/: test_integration.py  test_risk_calculations.py
web/backend/: main.py  risk_api.py
web/frontend/src/components/: RealTimeRiskDashboard.tsx  RiskDashboard.tsx
